@@ -1,3 +1,9 @@
+2002-03-20  Tom Rix  <trix@redhat.com>
+
+	* coff-rs6000.c (_bfd_xcoff_stat_arch_elt): Renamed from 
+	_bfd_xcoff_generic_stat_arch_elt.  Fix format check.
+	* coff64-rs6000.c :  Use _bfd_xcoff_stat_arch_elt. 
+
 Mon Mar 18 18:06:54 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cpu-i386.c (bfd_x86_64_arch): Rename to "i386:x86-64"
